[package]
name = "lab04"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1"

[[bin]]
name = "max3"
path = "src/bin/max3.rs"

[[bin]]
name = "swap"
path = "src/bin/swap.rs"

[[bin]]
name = "sort"
path = "src/bin/sort.rs"

[[bin]]
name = "fibrec"
path = "src/bin/fibrec.rs"

[[bin]]
name = "sumabs"
path = "src/bin/sumabs.rs"
